fix layout on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -80,8 +80,7 @@ input,
 button,
 textarea,
 select {
-  font-family: inherit;
-  font-size: inherit;
+  font: inherit;
 }
 
 /* Make sure textareas without a rows attribute are not tiny */
