--- a/src/components/DisplayStockDetails/DisplayStockDetails.css
+++ b/src/components/DisplayStockDetails/DisplayStockDetails.css
@@ -12,6 +12,11 @@
   margin: 0 22px;
   width: 236px;
   height: 28px;
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
 }
 
 .stock_details_list {
